[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "abc262a"
path = "src/abc262a.rs"

[[bin]]
name = "abc262b"
path = "src/abc262b.rs"

[[bin]]
name = "abc262c"
path = "src/abc262c.rs"

[[bin]]
name = "abc262d"
path = "src/abc262d.rs"

[[bin]]
name = "abc263a"
path = "src/abc263a.rs"

[[bin]]
name = "abc263b"
path = "src/abc263b.rs"

[[bin]]
name = "abc263c"
path = "src/abc263c.rs"

[[bin]]
name = "abc263d"
path = "src/abc263d.rs"

[[bin]]
name = "abc264a"
path = "src/abc264a.rs"

[[bin]]
name = "abc264b"
path = "src/abc264b.rs"

[[bin]]
name = "abc264c"
path = "src/abc264c.rs"

[[bin]]
name = "abc264d"
path = "src/abc264d.rs"

[dependencies]
proconio = "*"
itertools = "*"
