[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "abc250a"
path = "src/abc250a.rs"

[[bin]]
name = "abc250b"
path = "src/abc250b.rs"

[[bin]]
name = "abc250c"
path = "src/abc250c.rs"

[[bin]]
name = "abc251a"
path = "src/abc251a.rs"

[[bin]]
name = "abc251b"
path = "src/abc251b.rs"

[[bin]]
name = "abc251c"
path = "src/abc251c.rs"

[[bin]]
name = "abc252a"
path = "src/abc252a.rs"

[[bin]]
name = "abc252b"
path = "src/abc252b.rs"

[[bin]]
name = "abc252c"
path = "src/abc252c.rs"

[[bin]]
name = "abc260a"
path = "src/abc260a.rs"

[[bin]]
name = "abc260b"
path = "src/abc260b.rs"

[[bin]]
name = "abc260c"
path = "src/abc260c.rs"

[[bin]]
name = "abc260d"
path = "src/abc260d.rs"

[[bin]]
name = "abc261a"
path = "src/abc261a.rs"

[[bin]]
name = "abc261b"
path = "src/abc261b.rs"

[[bin]]
name = "abc261c"
path = "src/abc261c.rs"

[[bin]]
name = "abc262a"
path = "src/abc262a.rs"

[[bin]]
name = "abc262b"
path = "src/abc262b.rs"

[[bin]]
name = "abc262c"
path = "src/abc262c.rs"

[[bin]]
name = "abc262d"
path = "src/abc262d.rs"

[[bin]]
name = "abc263a"
path = "src/abc263a.rs"

[[bin]]
name = "abc263b"
path = "src/abc263b.rs"

[[bin]]
name = "abc263c"
path = "src/abc263c.rs"

[[bin]]
name = "abc263d"
path = "src/abc263d.rs"

[[bin]]
name = "abc264a"
path = "src/abc264a.rs"

[[bin]]
name = "abc264b"
path = "src/abc264b.rs"

[[bin]]
name = "abc264c"
path = "src/abc264c.rs"

[[bin]]
name = "abc264d"
path = "src/abc264d.rs"

[[bin]]
name = "abc265a"
path = "src/abc265a.rs"

[[bin]]
name = "abc265b"
path = "src/abc265b.rs"

[[bin]]
name = "abc265c"
path = "src/abc265c.rs"

[[bin]]
name = "abc265d"
path = "src/abc265d.rs"

[[bin]]
name = "abc266a"
path = "src/abc266a.rs"

[[bin]]
name = "abc266b"
path = "src/abc266b.rs"

[[bin]]
name = "abc266c"
path = "src/abc266c.rs"

[[bin]]
name = "abc266d"
path = "src/abc266d.rs"

[dependencies]
proconio = "*"
itertools = "*"
